# event_bookig

./: docker-compose.yml  prometheus.yml
auth_service/: Dockerfile  pyproject.toml
auth_service/app/: auth.py  auth_routes.py  database.py  main.py  models.py  schemas.py  user_routes.py
event_service/: Dockerfile  pyproject.toml
event_service/app/: celery_config.py  crud.py  database.py  main.py  models.py  redis_client.py  routers.py  schemas.py  tasks.py
