[tool.poetry]
name = "event-service"
version = "0.1.0"
description = "\"Сервис для управления событиями\""
authors = ["pavel.igonin <pavel.igonin@simbirsoft.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.3"
sqlalchemy = "^2.0.36"
databases = "^0.9.0"
psycopg2-binary = "^2.9.10"
uvicorn = "^0.22.0"
pydantic = "^1.10.9"
redis = "^4.6.0"
celery = "^5.2.0"
httpx = "^0.23.0"
prometheus-fastapi-instrumentator = "^7.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
